object storage sstable